--- a/test/Makefile
+++ b/test/Makefile
@@ -39,7 +39,9 @@ LDFLAGS = $(LIB)/libqatseqprod.a -I$(LIB)
 ifneq ($(ICP_ROOT), )
 	# LDFLAGS += -lqat_s -lusdm_drv_s -Wl,-rpath,$(ICP_ROOT)/build -L$(ICP_ROOT)/build
 	# LDFLAGS += -lqat_s -lusdm_drv_s -Wl,-rpath,$(ICP_ROOT)/build -L$(ICP_ROOT)/build -L/home/liang/tencent/liangdev/lvl_db/xFastCompress -lxFastCompress -I/home/liang/tencent/liangdev/lvl_db/xFastCompress
-	LDFLAGS += -lqat_s -lusdm_drv_s -llz4 -lz -Wl,-rpath,$(ICP_ROOT)/build -L$(ICP_ROOT)/build /home/liang/QATzip/src/.libs/libqatzip.a -I/home/liang/QATzip/include/
+	LDFLAGS += -lqat_s -lusdm_drv_s -llz4 -lz -Wl,-rpath,$(ICP_ROOT)/build -L$(ICP_ROOT)/build 
+	LDFLAGS += /home/liang/QATzip/src/.libs/libqatzip.a -I/home/liang/QATzip/include/
+	LDFLAGS += /home/liang/libdeflate/build/libdeflate.a -I/home/liang/libdeflate/
 else
 	LDFLAGS += -lqat -lusdm
 endif
