--- a/test/Makefile
+++ b/test/Makefile
@@ -42,7 +42,7 @@ ifneq ($(ICP_ROOT), )
 	LDFLAGS += -lqat_s -lusdm_drv_s -llz4 -lz -Wl,-rpath,$(ICP_ROOT)/build -L$(ICP_ROOT)/build 
 	LDFLAGS += /home/liang/QATzip/src/.libs/libqatzip.a -I/home/liang/QATzip/include/
 	LDFLAGS += /home/liang/libdeflate/build/libdeflate.a -I/home/liang/libdeflate/
-	LDFLAGS += -L/home/liang/tencent/liangdev/lvl_db/xFastCompress -lxFastCompress -I/home/liang/tencent/liangdev/lvl_db/xFastCompress
+	# LDFLAGS += -L/home/liang/tencent/liangdev/lvl_db/xFastCompress -lxFastCompress -I/home/liang/tencent/liangdev/lvl_db/xFastCompress
 else
 	LDFLAGS += -lqat -lusdm
 endif
